<resources>
    <string name="app_name">ObligatorioAppsDistribuidas</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="ingresa_el_nombre_de_un_libro">Ingresa el nombre de un libro</string>
    <string name="buscar">Buscar</string>
    <string name="user_details">User Details</string>
    <string name="agregar">Agregar</string>
    <string name="book_title">Book Title</string>
    <string name="ver_detalles">Ver Detalles</string>
    <string name="titulo">Titulo</string>
    <string name="autor">Autor</string>
    <string name="descripcion">Descripcion</string>
    <string name="numero_de_pagina_actual">Numero de pagina actual</string>
    <string name="salvar_numero_de_pagina">Salvar numero de pagina</string>
    <string name="subtitulo">Subtitulo</string>
    <string name="editorial">Editorial</string>
    <string name="fecha_de_publicacion">Fecha de publicacion</string>
    <string name="cantidad_de_paginas">Cantidad de paginas</string>
    <string name="volver">Volver</string>
    <string name="book_publisher">Editorial: %1$s</string>
    <string name="book_published_date">Fecha de Lanzamiento: %1$s</string>
    <string name="book_page_count">Numero de Paginas: %1$d</string>
    <string name="pagina_actual">Pagina actual:</string>
    <string name="pagina_actual_2">Pagina actual : %1$d</string>
    <string name="eliminar_libro">Eliminar Libro</string>
    <string name="libro_activo">Libro Activo</string>
    <string name="mis_libros">Mis Libros</string>
    <string name="ultimo_libro_leido">Ultimo Libro Leido</string>
    <string name="titulo_del_libro_activo">Titulo del Libro Activo</string>
    <string name="book_author">Autor/es:  %1$s</string>
    <string name="imagen_del_libro_activo">Imagen del libro activo</string>

</resources>