<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/bookImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/bookAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autor"/>

        <TextView
            android:id="@+id/bookDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"/>

        <EditText
            android:id="@+id/pageNumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_de_pagina_actual"/>

        <Button
            android:id="@+id/savePageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvar_numero_de_pagina"/>

    </LinearLayout>

</ScrollView>
